# learning-langchain

./: intro.ipynb  pyproject.toml
DataIngestion/: dataingestion.ipynb
DataIngestion/Embedding/: embed.ipynb
langchain/: chaining.ipynb
